--- a/components/GroupList/GroupList.module.scss
+++ b/components/GroupList/GroupList.module.scss
@@ -9,7 +9,7 @@
     background-image: url('/noise.png');
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 500px 500px;
+    background-size: 200px 200px;
     transition: border-radius .2s ease-in-out, transform .4s ease-in-out;
     overflow-y: auto;
     box-shadow: 0 0 10px 0 var(--black20);
