--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -6,10 +6,9 @@
     background-image: url('/noise.png');
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 500px 500px;
+    background-size: 200px 200px;
     -webkit-backdrop-filter: blur(4px);
     backdrop-filter: blur(4px);
-    border-radius: 0 0 1rem 1rem;
     z-index: 1;
 
     &Container {
