--- a/components/NewsList/NewsList.module.scss
+++ b/components/NewsList/NewsList.module.scss
@@ -12,7 +12,7 @@
     background-image: url('/noise.png');
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 300px 300px;
+    background-size: 200px 200px;
     transform: translateX(calc(100% + 10px));
     transition: transform .4s ease-in-out;
     box-shadow: 0 0 10px 0 var(--black20);
