--- a/components/PostItem/PostItem.module.scss
+++ b/components/PostItem/PostItem.module.scss
@@ -13,7 +13,7 @@
     background-image: url('/noise.png');
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 300px 300px;
+    background-size: 200px 200px;
     transform: translateX(calc(100% + 10px));
     transition: transform .4s ease-in-out;
     box-shadow: 0 0 10px 0 var(--black20);
@@ -31,9 +31,9 @@
     }
 
     &Inner {
-        transform: translateY(130%);
+        transform: translateY(20%);
         opacity: 0;
-        transition: all 0.6s ease-in-out;
+        transition: transform .7s ease-in-out, opacity 1s ease-in-out;
 
         .active & {
             transform: translateY(0);
